
## Removals

* `bson_as_json` and `bson_array_as_json` are removed due to producing non-portable Legacy Extended JSON. Prefer Canonical Extended JSON or Relaxed Extended JSON for portability. To continue using Legacy Extended JSON, use `bson_as_legacy_extended_json` and `bson_array_as_legacy_extended_json`.

libbson 1.30.2
==============

Fixes:

  * Fix `bson_new_from_buffer` behavior on malformed input.
  * Fix allocation of large `bson_t`.

Thanks to everyone who contributed to the development of this release.

  * Micah Scott
  * Kevin Albertson

libbson 1.30.1
==============

Fixes:
  * Fix `BSON_NORETURN` macro for C23 standard

Thanks to everyone who contributed to the development of this release.

  * Micah Scott


libbson 1.30.0
==============

Deprecated:

  * Support for Debian 9 and Debian 10.

Fixes:

  * Truncated output of `bson_as_json_with_opts` is changed to no longer split valid UTF-8 sequences.
  * Changes were made to the generated JSON text in some cases:
      * Previously, empty arrays and documents would serialize with either one or two spaces depending on whether it is nested. Empty arrays and documents now consistently serialize with just one space.
      * Previously, an array omitted due to the maximum recursion limit would serialize to "{ ... }", as if it were a document. Omitted arrays now serialize to "[ ... ]".
      * The maximum recursion limit now applies to legacy codewscope documents. Deeply nested scope documents will now be omitted like any other deeply nested document.
  * Fix leak of output parameter on failed call to `bson_append_array_builder_begin`.

Improvements:

  * Improve performance of BSON-to-JSON serialization for nested documents.


Thanks to everyone who contributed to the development of this release.

  * Kevin Albertson
  * Ezra Chung
  * Micah Scott
  * Jeremy Mikola
  * Colby Pike

libbson 1.29.2
==============

No changes since 1.29.1. Version incremented to match the libmongoc version.



libbson 1.29.1