@@ -9,6 +9,7 @@ libbson 2.0.0 (Unreleased)
 ## Removals
 
 * `bson_as_json` and `bson_array_as_json` are removed due to producing non-portable Legacy Extended JSON. Prefer Canonical Extended JSON or Relaxed Extended JSON for portability. To continue using Legacy Extended JSON, use `bson_as_legacy_extended_json` and `bson_array_as_legacy_extended_json`.
+* Compiling with `BSON_MEMCHECK` defined now has no effect.
 
 libbson 1.30.2
 ==============
